# minimal_newtab

./: .gitignore  LICENSE  README.md  art.js  build.py  defaultSettings.js  index.html  main.js  manifest.json  options.css  options.html  options.js  pyproject.toml  style.css  utils.js
components/css/: clock.css
components/js/: bookmarks.js  clock.js  sidebar.js  topRight.js  weather.js
src/assets/: manifest.json
src/components/: bookmarks.css  bookmarks.js  clock.css  clock.js  overlay.css  overlay.js  sidebar.css  sidebar.js  tabGroups.css  tabGroups.js  topRight.css  topRight.js  unsplash.js  weather.css  weather.js
src/pages/: background.js
src/pages/newtab/: index.html  main.js  style.css
src/pages/options/: options.css  options.html  options.js
src/shared/: defaultSettings.js  fouc.js  utils.js
src/widgets/: calendar.js  todo.js
widgets/: notification.js  todo.js
