[project]
name = "minimal-newtab"
version = "1.4.4"
description = "A minimal, new tab page with clock, weather, and bookmarks with theme support"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "minify-html>=0.18.1",
    "rcssmin>=1.1.0",
    "rjsmin>=1.2.0",
    "textual>=0.100.0",
    "watchdog>=6.0.0",
]
